--- a/Action_Potentials_Website_Self/about.html
+++ b/Action_Potentials_Website_Self/about.html
@@ -331,6 +331,134 @@
         </section>
         <!-- End Testimonial Section -->
 
+        <!-- Interior Section -->
+        <section class="interior-section style-three ">
+            <div class="auto-container ">
+                <div class="inner-container ">
+                    <div class="row clearfix ">
+
+                        <!-- Image Column -->
+                        <div class="image-column col-lg-4 col-md-12 col-sm-12 ">
+                            <div class="inner-column ">
+                                <div class="image ">
+                                    <img src="images/resource/interior.jpg " alt=" " />
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Content Column -->
+                        <div class="content-column col-lg-8 col-md-12 col-sm-12 ">
+                            <div class="inner-column ">
+                                <h2>Why Choose Us for a Summer Program</h2>
+                                <div class="text ">Free and Accessible. To give you a memorable online experience and build up crucial skillsets related to STEM.</div>
+                                <div class="row clearfix ">
+
+                                    <!-- Interior Block -->
+                                    <div class="interior-block col-lg-4 col-md-4 col-sm-12 ">
+                                        <div class="block-inner ">
+                                            <div class="icon-box ">
+                                                <span class="icon flaticon-award-1 "></span>
+                                            </div>
+                                            <h3>Student-Led</h3>
+                                        </div>
+                                    </div>
+
+                                    <!-- Interior Block -->
+                                    <div class="interior-block col-lg-4 col-md-4 col-sm-12 ">
+                                        <div class="block-inner ">
+                                            <div class="icon-box ">
+                                                <span class="icon flaticon-answer "></span>
+                                            </div>
+                                            <h3>Interactive Experience</h3>
+                                        </div>
+                                    </div>
+
+                                    <!-- Interior Block -->
+                                    <div class="interior-block col-lg-4 col-md-4 col-sm-12 ">
+                                        <div class="block-inner ">
+                                            <div class="icon-box ">
+                                                <span class="icon flaticon-hand "></span>
+                                            </div>
+                                            <h3>Accessible</h3>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+                                <div class="bold-text ">Take action and reach your potentials!</div>
+                                <div class="column-text "><a href="contact.html ">Get in touch with us</a></div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Interior Section -->
+
+        <!-- Counter Section -->
+        <section class="counter-section style-two ">
+            <div class="auto-container ">
+
+                <!-- Fact Counter -->
+                <div class="fact-counter ">
+                    <div class="row clearfix ">
+
+                        <!--Column-->
+                        <div class="column counter-column col-lg-3 col-md-6 col-sm-12 ">
+                            <div class="inner wow fadeInLeft " data-wow-delay="0ms " data-wow-duration="1500ms ">
+                                <div class="content ">
+                                    <div class="count-outer count-box ">
+                                        <span class="count-text " data-speed="2500 " data-stop="7 "></span> Years
+                                    </div>
+                                    <h4 class="counter-title ">Robotics and STEM Prior Experiences </h4>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--Column-->
+                        <div class="column counter-column col-lg-3 col-md-6 col-sm-12 ">
+                            <div class="inner wow fadeInLeft " data-wow-delay="300ms " data-wow-duration="1500ms ">
+                                <div class="content ">
+                                    <div class="count-outer count-box alternate ">
+                                        <span class="count-text " data-speed="3000 " data-stop="100 "></span>+
+                                    </div>
+                                    <h4 class="counter-title ">STEM-Related Projects Completed</h4>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--Column-->
+                        <div class="column counter-column col-lg-3 col-md-6 col-sm-12 ">
+                            <div class="inner wow fadeInLeft " data-wow-delay="600ms " data-wow-duration="1500ms ">
+                                <div class="content ">
+                                    <div class="count-outer count-box ">
+                                        <span class="count-text " data-speed="3000 " data-stop="20 "></span>+
+                                    </div>
+                                    <h4 class="counter-title ">Cumilative Robotics Tournament Experience</h4>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--Column-->
+                        <div class="column counter-column col-lg-3 col-md-6 col-sm-12 ">
+                            <div class="inner wow fadeInLeft " data-wow-delay="900ms " data-wow-duration="1500ms ">
+                                <div class="content ">
+                                    <div class="count-outer count-box ">
+                                        <span class="count-text " data-speed="2500 " data-stop="25 "></span>+
+                                    </div>
+                                    <h4 class="counter-title ">Robotics Sessions Planned and Executed</h4>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- End Counter Section -->
+
         <!--Main Footer-->
         <footer class="main-footer">
             <div class="auto-container">
