--- a/Action_Potentials_Website_Self/blog_template.html
+++ b/Action_Potentials_Website_Self/blog_template.html
@@ -287,6 +287,8 @@
                                 <p class="text">Currently unavailable, sorry for your inconvenience.</p>
                             </div>
 
+                            <h2><a href="blog.html">See more Blogs</a></h1>
+                            <br>
                             <!--Blog Category Widget-->
                             <div class="sidebar-widget sidebar-blog-category">
                                 <div class="sidebar-title">
@@ -340,12 +342,7 @@
                                 <div class="sidebar-title">
                                     <h2>Tags</h2>
                                 </div>
-                                <a href="blog-coding.html">Coding</a>
-                                <a href="blog-CAD.html">Computer-Aided Design</a>
                                 <a href="blog-ideas.html">Ideas</a>
-                                <a href="blog-stories.html">STEM Stories</a>
-                                <a href="blog-projects.html">Research Project Summaries</a>
-                                <a href="blog-robotics.html">Robotics</a>
                             </div>
 
                         </aside>
