--- a/Action_Potentials_Website_Self/summer-program.html
+++ b/Action_Potentials_Website_Self/summer-program.html
@@ -226,8 +226,8 @@
                                 <tr>
                                     <td>0</td>
                                     <td>July 12, 2021</td>
-                                    <td>Opening Covocation</td>
-                                    <td>Introduction to the prorgam, timeline, and tech-requirments</td>
+                                    <td>Technical Information Checklist Released</td>
+                                    <td>Instructions to various websites and platforms for this program</td>
                                 </tr>
                                 <tr>
                                     <td>0</td>
@@ -240,6 +240,12 @@
                                     <td>July 16, 2021</td>
                                     <td>Tech-Troubleshoot Session 2</td>
                                     <td>Optional, attend if encounter any tech issues</td>
+                                </tr>
+                                <tr>
+                                    <td>0</td>
+                                    <td>July 18, 2021</td>
+                                    <td>Opening Covocation</td>
+                                    <td>Introduction to the prorgam, timeline, and tech-requirments</td>
                                 </tr>
                                 <tr>
                                     <td>1</td>
