--- a/Action_Potentials_Website_Self/about.html
+++ b/Action_Potentials_Website_Self/about.html
@@ -190,11 +190,11 @@
                                             <div class="content-column col-lg-8 col-md-8 col-sm-12">
                                                 <div class="inner-column">
                                                     <h3>Immersive, interactive, online. Learning STEM-related subjects is made easy with Action Potentials</h3>
-                                                    <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service
-                                                        for state of the art customer service.</p>
-                                                    <p>Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services.</p>
-                                                    <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service
-                                                        for state of the art customer service.Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate .</p>
+                                                    <p>During the initial lockdown of 2020, Rayan and Grace decided to start a STEM-related, free tutoring foundation name Action Potentials. Although the program was unable to attract many students, we decided
+                                                        to reintroduce and remodel the foundation into an all-in-one student-led foundation. </p>
+                                                    <p>We believe that every student should have the opportunity to reach their potentials, as long as they commit to proactively learn. For those who are curious to discern, we are here to support your journey.
+                                                    </p>
+                                                    <p></p>
                                                 </div>
                                             </div>
                                         </div>
