--- a/Action_Potentials_Website_Self/about.html
+++ b/Action_Potentials_Website_Self/about.html
@@ -181,10 +181,10 @@
                                         <div class="row clearfix">
                                             <div class="column col-lg-4 col-md-4 col-sm-12">
                                                 <div class="image">
-                                                    <img src="images/resource/service-26.jpg" alt="" />
+                                                    <img src="images/compat drill.JPG" alt="" />
                                                 </div>
                                                 <div class="image">
-                                                    <img src="images/resource/service-27.jpg" alt="" />
+                                                    <img src="images/mecanum wheel.JPG" alt="" />
                                                 </div>
                                             </div>
                                             <div class="content-column col-lg-8 col-md-8 col-sm-12">
