--- a/Action_Potentials_Website_Self/about.html
+++ b/Action_Potentials_Website_Self/about.html
@@ -191,10 +191,11 @@
                                                 <div class="inner-column">
                                                     <h3>Immersive, interactive, online. Learning STEM-related subjects is made easy with Action Potentials</h3>
                                                     <p>During the initial lockdown of 2020, Rayan and Grace decided to start a STEM-related, free tutoring foundation name Action Potentials. Although the program was unable to attract many students, we decided
-                                                        to reintroduce and remodel the foundation into an all-in-one student-led foundation. </p>
+                                                        to reintroduce and remodel the project into an all-in-one student-led foundation. </p>
                                                     <p>We believe that every student should have the opportunity to reach their potentials, as long as they commit to proactively learn. For those who are curious to discern, we are here to support your journey.
                                                     </p>
-                                                    <p></p>
+                                                    <p>This summer, we are excited to re-launch this project with additional features such as STEM summer camps, blogs, additional learning resources, and an online project publisher. We believe that by supporting
+                                                        your learning, we will also acquire new knowledge, and we will develop our skills together.</p>
                                                 </div>
                                             </div>
                                         </div>
