--- a/Action_Potentials_Website_Self/service.html
+++ b/Action_Potentials_Website_Self/service.html
@@ -179,22 +179,17 @@
                                     <!-- Two Column -->
                                     <div class="two-column">
                                         <div class="row clearfix">
-                                            <div class="column col-lg-4 col-md-4 col-sm-12">
+                                            <div class="column col-lg-6 col-md-6 col-sm-12">
                                                 <div class="image">
-                                                    <img src="images/resource/service-26.jpg" alt="" />
-                                                </div>
-                                                <div class="image">
-                                                    <img src="images/resource/service-27.jpg" alt="" />
+                                                    <img src="images/blueprint1.jpg" alt="" />
                                                 </div>
                                             </div>
-                                            <div class="content-column col-lg-8 col-md-8 col-sm-12">
+                                            <div class="content-column col-lg-6 col-md-6 col-sm-12">
                                                 <div class="inner-column">
                                                     <h3>Immersive, interactive, online. Learning STEM-related subjects is made easy with Action Potentials</h3>
-                                                    <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service
-                                                        for state of the art customer service.</p>
-                                                    <p>Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services.</p>
-                                                    <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service
-                                                        for state of the art customer service.Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate .</p>
+                                                    <p>We offer a variety of services including individual tutorials, discussion sessions, online learning resources, and a online project publisher that all eligible project may apply to be featured on our
+                                                        website.
+                                                    </p>
                                                 </div>
                                             </div>
                                         </div>
