--- a/Action_Potentials_Website_Self/service.html
+++ b/Action_Potentials_Website_Self/service.html
@@ -188,7 +188,7 @@
                                                 <div class="inner-column">
                                                     <h3>Immersive, interactive, online. Learning STEM-related subjects is made easy with Action Potentials</h3>
                                                     <p>We offer a variety of services including individual tutorials, discussion sessions, online learning resources, and a online project publisher that all eligible project may apply to be featured on our
-                                                        website.
+                                                        website, all free of charge.
                                                     </p>
                                                 </div>
                                             </div>
