--- a/Action_Potentials_Website_Self/services-tutorials1.html
+++ b/Action_Potentials_Website_Self/services-tutorials1.html
@@ -167,6 +167,54 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>This Program</h2>
+                            <div class="bold-text">Immersive, interactive, online. Learning STEM-related subjects is made easy with Action Potentials</div>
+                            <div class="text">
+                                <p>We offer 1-on-1 tutorials on STEM subjects both taught in school (Grade 10 or below) or extracurricular to support interested students. Whether you wish to learn ahead of the curriculum or improve your understanding of
+                                    a a topic from previous years, contact us know and we will be glad to help you. For extracurricular subjects, if you have a few friends who are interested in a specific subject such as Coding or Computer-Aided Design,
+                                    we also offer group lectures where you and your friends may all attend a personalized program to learn the subjects of your interest.
+                                </p>
+                                <p>Both types of tutorial will be hosted on Zoom. Currently, we do not offer group lectures due to its schedule and content overlaps with our <a href="summer-program.html">summer program</a>. However, 1-on-1 tutorials are
+                                    available. Take action and reach your potentials.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/steering_wheel.JPG" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
+        <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+            <div class="auto-container ">
+                <a href="sessions.html">
+                    <h2>Contact us now to personalize your learning journey!</h2>
+                </a>
+                <a href="contact.html " class="theme-btn btn-style-two "><span class="txt ">Contact us</span></a>
+                <a href="https://forms.gle/aXTjHPzUuhMsiZXo7 " class="theme-btn btn-style-two "><span class="txt ">Join us as a Volunteer</span></a>
+                <a href="calendar.html" class="theme-btn btn-style-two "><span class="txt ">Ckeck our Availabilities</span></a>
+            </div>
+        </section>
+        <!-- End Call To Action Section -->
 
         <!--Main Footer-->
         <footer class="main-footer">
