--- a/Action_Potentials_Website_Self/services-resources.html
+++ b/Action_Potentials_Website_Self/services-resources.html
@@ -167,6 +167,38 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>This Program</h2>
+                            <div class="bold-text">Immersive, interactive, online. Learning STEM-related subjects is made easy with Action Potentials</div>
+                            <div class="text">
+                                <p>Under this page, we offer an array of learning resources. Whether it is a blog that links you to various free learning resources or a web page that leads you to a series of tutorial videos created by Action Potentials,
+                                    you can easily access them via this web page. </p>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/air_filter.JPG" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
         <!--Main Footer-->
         <footer class="main-footer">
             <div class="auto-container">
