--- a/Action_Potentials_Website_Self/services-tutorials1.html
+++ b/Action_Potentials_Website_Self/services-tutorials1.html
@@ -207,7 +207,7 @@
         <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
             <div class="auto-container ">
                 <a href="sessions.html">
-                    <h2>Contact us now to personalize your learning journey!</h2>
+                    <h2>Contact us now!</h2>
                 </a>
                 <a href="contact.html " class="theme-btn btn-style-two "><span class="txt ">Contact us</span></a>
                 <a href="https://forms.gle/aXTjHPzUuhMsiZXo7 " class="theme-btn btn-style-two "><span class="txt ">Join us as a Volunteer</span></a>
