--- a/Action_Potentials_Website_Self/blog.html
+++ b/Action_Potentials_Website_Self/blog.html
@@ -244,6 +244,24 @@
                             </div>
                         </div>
 
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/career-communities.jpg" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="blog_where_to_find_learning_resources.html">Free Online Learning Resources</a></h3>
+                                                <a href="blog_where_to_find_learning_resources.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
