--- a/Action_Potentials_Website_Self/services-resources.html
+++ b/Action_Potentials_Website_Self/services-resources.html
@@ -199,6 +199,66 @@
         </section>
         <!-- End Story Section -->
 
+        <!-- Portfolio Page Section -->
+        <section class="portfolio-page-section">
+            <div class="auto-container">
+                <!--MixitUp Galery-->
+                <div class="mixitup-gallery">
+
+                    <!--Filter-->
+                    <div class="filters clearfix">
+                        <h3 class="text-portfolio"><i><b>More contents are coming soon!</b></i></h3>
+                        <br>
+                        <ul class="filter-tabs filter-btns text-center clearfix">
+                            <li class="active filter" data-role="button" data-filter="all">All Works</li>
+                            <li class="filter" data-role="button" data-filter=".online">Online Free Resources</li>
+                            <li class="filter" data-role="button" data-filter=".original">Resources Created by Action Potentials</li>
+                    </div>
+
+                    <div class="filter-list row clearfix">
+
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all original col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/FTCrobot_cropped.JPG" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="CAD_tutorials.html">Computer Aided Design Tutorials</a></h3>
+                                                <a href="CAD_tutorials.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all online col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/career-communities.jpg" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="blog_where_to_find_learning_resources.html">Free Online Learning Resources</a></h3>
+                                                <a href="blog_where_to_find_learning_resources.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
         <!--Main Footer-->
         <footer class="main-footer">
             <div class="auto-container">
@@ -270,7 +330,7 @@
                                         <div class="text">Let us know what you think</div>
                                         <!-- Newsletter Form -->
                                         <div class="newsletter-form">
-                                            <form method="post" action="templateshub.net">
+                                            <form method="post" action="#">
                                                 <div class="form-group">
                                                     <input type="email" name="email" value="" placeholder="Enter your email address">
                                                     <div class="form-submission-button">
@@ -347,18 +407,21 @@
             </div>
         </div>
 
+
         <!--Scroll to top-->
         <script src="js/jquery.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/jquery-ui.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery.fancybox.js"></script>
-        <script src="js/isotope.js"></script>
         <script src="js/owl.js"></script>
         <script src="js/wow.js"></script>
+        <script src="js/mixitup.js"></script>
         <script src="js/appear.js"></script>
         <script src="js/scrollbar.js"></script>
         <script src="js/script.js"></script>
 </body>
+
+<!-- stella-orre/projects-classic.html  30 Nov 2019 03:51:15 GMT -->
 
 </html>
