--- a/Action_Potentials_Website_Self/projects.html
+++ b/Action_Potentials_Website_Self/projects.html
@@ -166,6 +166,38 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>Our Projects</h2>
+                            <div class="text">
+                                <p>Here are the projects published or created by Action Potentials. Here, we offer to publish all qualified projects online for high school students. Research often seem unaccessible for high school students because it require
+                                    a lot of knowledge and work. After completing a research project, students also often encounter barriers to showcase them. At Action Potentials, we offer to help making high school research more accessible by publishing
+                                    them online and allow open-access for all.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/compat drill.JPG" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
