--- a/Action_Potentials_Website_Self/blog.html
+++ b/Action_Potentials_Website_Self/blog.html
@@ -166,6 +166,20 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+            <div class="auto-container ">
+                <h2>Catagories</h2>
+                <br>
+                <a href="blog-CAD.html" class="theme-btn btn-style-two "><span class="txt ">Computer-Aided Design</span></a>
+                <a href="blog-coding.html" class="theme-btn btn-style-two "><span class="txt ">Coding</span></a>
+                <a href="blog-ideas.html" class="theme-btn btn-style-two "><span class="txt ">Ideas</span></a>
+                <a href="blog-projects.html" class="theme-btn btn-style-two "><span class="txt ">Research Projects</span></a>
+                <a href="blog-robotics.html" class="theme-btn btn-style-two "><span class="txt ">Robotics</span></a>
+                <a href="blog-stories.html" class="theme-btn btn-style-two "><span class="txt ">STEM Stories</span></a>
+            </div>
+        </section>
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
@@ -255,6 +269,25 @@
                                             <div class="content">
                                                 <h3><a href="blog_where_to_find_learning_resources.html">Free Online Learning Resources</a></h3>
                                                 <a href="blog_where_to_find_learning_resources.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all project col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/diagram 2.jpg" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="blog_poseidon.html">PosEIDOn - Targeting Cancer with Positron and Electron Irradiation Scattering Onset
+                        </a></h3>
+                                                <a href="blog_poseidon.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
                                     </div>
