--- a/Action_Potentials_Website_Self/services-tutorials1.html
+++ b/Action_Potentials_Website_Self/services-tutorials1.html
@@ -209,9 +209,10 @@
                 <a href="sessions.html">
                     <h2>Contact us now!</h2>
                 </a>
+                <br>
                 <a href="contact.html " class="theme-btn btn-style-two "><span class="txt ">Contact us</span></a>
                 <a href="https://forms.gle/aXTjHPzUuhMsiZXo7 " class="theme-btn btn-style-two "><span class="txt ">Join us as a Volunteer</span></a>
-                <a href="calendar.html" class="theme-btn btn-style-two "><span class="txt ">Ckeck our Availabilities</span></a>
+                <a href="calendar.html" class="theme-btn btn-style-two "><span class="txt ">Check our Availabilities</span></a>
             </div>
         </section>
         <!-- End Call To Action Section -->
