--- a/Action_Potentials_Website_Self/blog_gallery_items_scratch.html
+++ b/Action_Potentials_Website_Self/blog_gallery_items_scratch.html
@@ -1,15 +1,14 @@
 <!-- Gallery Item -->
-<div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
+<div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
     <div class="inner-box">
         <figure class="image-box">
-            <img src="images/.JPG" alt="">
+            <img src="images/rim.JPG" alt="">
             <!--Overlay Box-->
             <div class="overlay-box">
                 <div class="overlay-inner">
                     <div class="content">
-                        <h3><a href="blog_poseidon.html">PosEIDOn - Targeting Cancer with Positron and Electron Irradiation Scattering Onset
-                        </a></h3>
-                        <a href="blog_poseidon.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                        <h3><a href="blog_how_to_make_anything.html">How to Make Anything?</a></h3>
+                        <a href="blog_how_to_make_anything.html" class="link"><span class="icon flaticon-unlink"></span></a>
                     </div>
                 </div>
             </div>
@@ -18,7 +17,7 @@
 </div>
 
 <!-- Gallery Item -->
-<div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
+<div class="gallery-item mix all project col-lg-4 col-md-6 col-sm-12">
     <div class="inner-box">
         <figure class="image-box">
             <img src="images/prion.JPG" alt="">
