--- a/Action_Potentials_Website_Self/join-us.html
+++ b/Action_Potentials_Website_Self/join-us.html
@@ -169,6 +169,38 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>Become a volunteer</h2>
+                            <div class="bold-text">Join us and help others to reach their potentials!</div>
+                            <div class="text">
+                                <p>We welcome interested high school students to join us as a volunteer to teach students STEM-related subjects or oversee the operation of the foundation. Our vision of the ideal volunteer at Action Potentials is thoughtful,
+                                    versatile, and resourceful. All high school students are welcome to apply and become a part of this foundation. </p>
+                                <p>The main tasks for a volunteer with Action Potentials consist of teaching other students, event planning, blog writing, and website management. </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/steering_wheel.JPG" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
         <!-- Contact Form Section -->
         <section class="contact-form-section" style="background-image:url(images/piston.JPG)">
             <div class="auto-container">
