--- a/Action_Potentials_Website_Self/join-us.html
+++ b/Action_Potentials_Website_Self/join-us.html
@@ -181,8 +181,14 @@
                             <div class="bold-text">Join us and help others to reach their potentials!</div>
                             <div class="text">
                                 <p>We welcome interested high school students to join us as a volunteer to teach students STEM-related subjects or oversee the operation of the foundation. Our vision of the ideal volunteer at Action Potentials is thoughtful,
-                                    versatile, and resourceful. All high school students are welcome to apply and become a part of this foundation. </p>
-                                <p>The main tasks for a volunteer with Action Potentials consist of teaching other students, event planning, blog writing, and website management. </p>
+                                    versatile, and resourceful. All high school students are welcome to apply and become a part of this foundation.
+                                </p>
+                                <p>The main tasks for a volunteer at Action Potentials consist of teaching other students, event planning, blog writing, and website management. Although you are not obligated to be involved in all aspects of this foundation,
+                                    we highly encourage volunteers to do so as it increases your versatility overtime.
+                                </p>
+                                <p>Volunteers at Action Potential do not have a long-term commitment requirment. For example, as a volunteer tutor, you will be linked with various students and are expected to schedule your own volunteer hours. However, if
+                                    you are interested in participating in executive functions, a weekly commitment of around two hours will be expected.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -200,6 +206,59 @@
             </div>
         </section>
         <!-- End Story Section -->
+
+        <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
+            <div class="auto-container ">
+                <a href="summer-program.html ">
+                    <h2>Here are some additional information about our programs.</h2>
+                </a>
+                <div class="text ">Join us and help others to reach their potentials!</div>
+                <a href="contact.html " class="theme-btn btn-style-two "><span class="txt ">Contact us</span></a>
+                <a href="service.html" class="theme-btn btn-style-two "><span class="txt ">Our programs</span></a>
+                <a href="about.html" class="theme-btn btn-style-two "><span class="txt ">About us</span></a>
+            </div>
+        </section>
+        <!-- End Call To Action Section -->
+
+        <!--Requirement Detail-->
+        <div class="auto-container ">
+            <br>
+            <h2>Requirements</h2>
+            <div class="row clearfix ">
+                <div class="content-column col-lg-12 col-md-12 col-sm-12 ">
+                    <div class="inner-column ">
+                    </div>
+                    <br>
+                    <div class="text">Here are the requirements for you to become a volunteer at Action Potentials</div>
+                    <div class="table ">
+                        <div class="text ">
+                            <br>
+                            <table width="100% ">
+                                <tr>
+                                    <th>Minimum Age</th>
+                                    <td>14 (inclusive). However, if you are interested, we are open to making exceptions.</td>
+                                </tr>
+                                <tr>
+                                    <th>Minimum STEM Experience</th>
+                                    <td>N/A</td>
+                                </tr>
+                                <tr>
+                                    <th>Minimum Time Commitment per Week</th>
+                                    <td>N/A, 2 hours for executive members. </td>
+                                </tr>
+                                <tr>
+                                    <th>Parent Consent</th>
+                                    <td>Yes, for privacy concerns because we may publish your information online. </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <!--End Requirment Detail-->
 
         <!-- Contact Form Section -->
         <section class="contact-form-section" style="background-image:url(images/piston.JPG)">
