--- a/Action_Potentials_Website_Self/summer-program.html
+++ b/Action_Potentials_Website_Self/summer-program.html
@@ -211,7 +211,7 @@
                     </div>
                     <br>
                     <div class="text">Each week, you will be expected to attend all ZOOM classes. If you are absent for any classes, please contact us, and we will send you some learning resources for you to catch up. This program is highly self-led - the more you work,
-                        the more you will learn. We pro</div>
+                        the more you will learn. We will provide as much supports to you as possible but some topics may require you to play around with the software to learn the quirks of their syntax.</div>
                     <div class="table ">
                         <div class="text ">
                             <br>
