--- a/Action_Potentials_Website_Self/blog-coding.html
+++ b/Action_Potentials_Website_Self/blog-coding.html
@@ -167,6 +167,39 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>Coding Related Blogs</h2>
+                            <div class="bold-text">Take action and reach your potentials!</div>
+                            <div class="text">
+                                <p>Under this section, you may find blogs related to computer science and coding. Coding is a very broad topic that includes various aspects of computer science and its applications. Under this section, most contents will
+                                    be principle related instead of tutorials. If you are interested in learning to code, check out <a href="services-resources.html">our learning resources page</a> for more information. Check out our blogs and start diving
+                                    into the world of virtual researches.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/air_filter.JPG" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
