--- a/Action_Potentials_Website_Self/blog-CAD.html
+++ b/Action_Potentials_Website_Self/blog-CAD.html
@@ -167,6 +167,38 @@
         </section>
         <!--End Page Title-->
 
+        <!-- Story Section -->
+        <section class="story-section">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!-- Content Column -->
+                    <div class="content-column col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <h2>Computer-Aided Design Related Blogs</h2>
+                            <div class="bold-text">Take action and reach your potentials!</div>
+                            <div class="text">
+                                <p>Under this section, you may find blogs related to computer-aided design. Whether it is about a rendering project, a computational simulation data science research, a generative design product, or newest advancements in
+                                    computational modeling, they all fall under the umbrella of computational-aided design. Check out our blogs and start diving into the world of virtual researches.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Image Column -->
+                    <div class="image-column col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner-column">
+                            <div class="image">
+                                <img src="images/CFD.png" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
+
         <!-- Portfolio Page Section -->
         <section class="portfolio-page-section">
             <div class="auto-container">
